--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][COLORS]
-Pos=5,7
-Size=482,175
+Pos=60,60
+Size=127,152
+Collapsed=0
+
+[Window][COMPUTE SHADERS]
+Pos=296,61
+Size=475,179
 Collapsed=0
 
