improved launcher (multiprocessing), added shader selection

--- a/config/ini/slime_mold_window.ini
+++ b/config/ini/slime_mold_window.ini
@@ -1,7 +1,10 @@
+[compute_shader]
+directory = slime normal
+
 [color_fg]
 red = 1.0
-green = 0.9999899864196777
-blue = 0.9999899864196777
+green = 1.0
+blue = 1.0
 
 [color_bg]
 red = 0.0
