little improvements; major progress on the slime mold simulation

--- a/config/ini/slime_mold_window.ini
+++ b/config/ini/slime_mold_window.ini
@@ -11,3 +11,27 @@ red = 0.0
 green = 0.0
 blue = 0.0
 
+[agent]
+count = 100
+movement_speed = 0.25
+rotation_speed = 50.0
+sensor_distance = 10.0
+sensor_angle = 0.83
+sensor_size = 1
+
+[agent_defaults]
+count = 1000000
+movement_speed = 50.0
+rotation_speed = 50.0
+sensor_distance = 10.0
+sensor_angle = 0.83
+sensor_size = 1
+
+[blur]
+diffusion_speed = 1.0
+evaporation_speed = 0.5
+
+[blur_defaults]
+diffusion_speed = 10.0
+evaporation_speed = 5.0
+
