minor improvements; improved and added to gui

--- a/config/ini/slime_mold_window.ini
+++ b/config/ini/slime_mold_window.ini
@@ -13,23 +13,23 @@ blue = 0.0
 
 [agent]
 count = 100
-movement_speed = 0.25
-rotation_speed = 50.0
-sensor_distance = 10.0
-sensor_angle = 0.83
+movement_speed = 2.5
+rotation_speed = 2.5
+sensor_angle = 0.8299999833106995
+sensor_distance = 1
 sensor_size = 1
 
 [agent_defaults]
 count = 1000000
 movement_speed = 50.0
 rotation_speed = 50.0
-sensor_distance = 10.0
 sensor_angle = 0.83
+sensor_distance = 10
 sensor_size = 1
 
 [blur]
-diffusion_speed = 1.0
-evaporation_speed = 0.5
+diffusion_speed = 20.0
+evaporation_speed = 0.3499999940395355
 
 [blur_defaults]
 diffusion_speed = 10.0
