--- a/imgui.ini
+++ b/imgui.ini
@@ -3,13 +3,23 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][COLORS]
+[Window][COMPUTE SHADERS]
 Pos=2,2
 Size=350,175
 Collapsed=0
 
-[Window][COMPUTE SHADERS]
-Pos=2,179
+[Window][COLORS]
+Pos=354,2
 Size=350,175
-Collapsed=1
+Collapsed=0
+
+[Window][SLIMES [agents]]
+Pos=2,179
+Size=600,200
+Collapsed=0
+
+[Window][PHEREMONES [blur]]
+Pos=2,383
+Size=600,75
+Collapsed=0
 
