improvements, slime compute shader finished

--- a/config/ini/slime_mold_window.ini
+++ b/config/ini/slime_mold_window.ini
@@ -3,8 +3,8 @@ directory = slime normal
 
 [color_fg]
 red = 1.0
-green = 1.0
-blue = 1.0
+green = 0.9999899864196777
+blue = 0.9999899864196777
 
 [color_bg]
 red = 0.0
@@ -12,11 +12,11 @@ green = 0.0
 blue = 0.0
 
 [agent]
-count = 100
-movement_speed = 2.5
-rotation_speed = 2.5
-sensor_angle = 0.8299999833106995
-sensor_distance = 1
+count = 1000000
+movement_speed = 0.4359999895095825
+rotation_speed = 0.38999998569488525
+sensor_angle = 0.8349999785423279
+sensor_distance = 5
 sensor_size = 1
 
 [agent_defaults]
@@ -28,8 +28,8 @@ sensor_distance = 10
 sensor_size = 1
 
 [blur]
-diffusion_speed = 20.0
-evaporation_speed = 0.3499999940395355
+diffusion_speed = 17.889999389648438
+evaporation_speed = 2.316999912261963
 
 [blur_defaults]
 diffusion_speed = 10.0
